hphp/hack/test/typecheck/reactive/reassign_in_foreach2.php.exp
File "reassign_in_foreach2.php", line 15, characters 5-9:
This object's property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
